# OpcUaDuckDb

./: .gitignore  Cargo.toml  README.md
examples/nodesets/: instance.xml  type_library.xml
examples/python/: example.py
opcua-client/: Cargo.toml
opcua-client/src/: lib.rs  types.rs
opcua-crawler/: pyproject.toml
opcua-crawler/src/opcua_crawler/: __init__.py  __main__.py  crawler.py  schema.py
opcua-crawler/tests/: test_crawler.py  test_schema.py
opcua-duckdb/: Cargo.toml
opcua-duckdb/src/: lib.rs
opcua-python/: Cargo.toml  pyproject.toml
opcua-python/src/: lib.rs
