[package]
name = "opcua-client"
version = "0.1.0"
edition = "2021"
description = "OPC UA client library exposing read, write, history, and browse operations"

[dependencies]
opcua = { version = "0.12", features = ["client"] }
chrono = "0.4"
thiserror = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
