[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opcua-crawler"
version = "0.1.0"
description = "OPC UA namespace crawler that builds a graph database in DuckDB"
requires-python = ">=3.9"
dependencies = [
    "asyncua>=1.0.0",
    "duckdb>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
opcua-crawler = "opcua_crawler.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
