[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "opcua-python"
version = "0.1.0"
description = "Python bindings for OPC UA client operations (read, write, history, browse)"
requires-python = ">=3.8"

[tool.maturin]
manifest-path = "Cargo.toml"
features = []
